# snippets

./: README.md
b64/: CMakeLists.txt  main.cpp
curl_json/: CMakeLists.txt  main.cpp
curl_json/urls/: CMakeLists.txt  requests.cpp  requests.hpp
gstreamer/: CMakeLists.txt  code0.cpp  code1.cpp  code2.cpp  main.cpp  string_bin.cpp  string_pipeline.cpp  string_pipeline_simple.cpp  video.html  webcam.cpp  webstream.txt
pytorch/: CMakeLists.txt  config.yml  main.cpp
pytorch/dnn/: CMakeLists.txt  object_detection.cpp  object_detection.hpp  tools.cpp  tools.hpp
socket_client/: CMakeLists.txt  basic.cpp  twitch.cpp  twitch.yml
socket_client/twitch/: CMakeLists.txt  irc.cpp  irc.hpp
threading/: CMakeLists.txt  main.cpp
time_storage/: CMakeLists.txt  main.cpp
timer/: main.cpp
vulkan_headless/: CMakeLists.txt  config.json  config.yml  create_json_config.cpp  main.cpp  todo.md
vulkan_headless/base64/: CMakeLists.txt  base64.cpp  base64.hpp
vulkan_headless/extra/shaders/: tri_mesh.frag  tri_mesh.frag.spv  tri_mesh.vert  tri_mesh.vert.spv  tri_mesh_color.frag  tri_mesh_color.frag.spv  tri_mesh_color.vert  tri_mesh_color.vert.spv  tri_mesh_nl.frag  tri_mesh_nl.frag.spv  tri_mesh_nl.vert  tri_mesh_nl.vert.spv
vulkan_headless/vengine/: CMakeLists.txt  VulkanTools.h  base_tools.cpp  base_tools.hpp  module.cpp  module.hpp  v_descriptor_pool.cpp  v_descriptor_pool.hpp  v_device.cpp  v_device.hpp  v_engine.cpp  v_engine.hpp  v_image.cpp  v_image.hpp  v_mesh.cpp  v_mesh.hpp  v_object.cpp  v_object.hpp  v_pipeline.cpp  v_pipeline.hpp  v_texture.cpp  v_texture.hpp  v_textured_model.cpp  v_textured_model.hpp
yaml/: CMakeLists.txt  config.yml  main.cpp
zeromq_tutorial/dealer_pull/: client.cpp  server.cpp
zeromq_tutorial/dealer_rep/: client.cpp  server.cpp
zeromq_tutorial/pub_sub/: client.cpp  server.cpp
zeromq_tutorial/push_pull/: client.cpp  readme.md  server.cpp
zeromq_tutorial/req_rep/: CMakeLists.txt  client.cpp  server.cpp
zeromq_tutorial/req_router_dealer_rep/: CMakeLists.txt  broker_load_balance.cpp  broker_proxy.cpp  client.cpp  worker.cpp
zeromq_tutorial/req_router_router_req/: CMakeLists.txt  broker.cpp  client.cpp  worker.cpp
zeromq_tutorial/req_router_vec_router_req/: broker.cpp  worker.cpp
zeromq_tutorial/router_req/: client.cpp  server.cpp
